--- a/app/src/main/res/layout/activity_dash_board.xml
+++ b/app/src/main/res/layout/activity_dash_board.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".DashboardFragment">
+    tools:context=".HomeScreenFragments.DashboardFragment">
 
     <LinearLayout
         android:id="@+id/content"
@@ -18,6 +18,16 @@
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
             android:padding="10dp">
+
+            <ImageButton
+                android:id="@+id/btnSingnUp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_marginEnd="9dp"
+                android:background="#001E1D1D"
+                android:contentDescription="@string/submit_data_title"
+                android:src="@drawable/ic_outline_add_box_24" />
 
             <ImageButton
                 android:id="@+id/btnSubmit"
