--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center_vertical"
-    tools:context=".MusicPlayer">
+    tools:context=".MusicPlayer.MusicPlayer">
 
     <ImageView
         android:id="@+id/imageAlbumArtBackground"
