--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -110,8 +110,8 @@
                 android:paddingEnd="20dp">
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/signUpFirstName"
-                    android:hint="@string/first_name"
+                    android:id="@+id/signUpFullName"
+                    android:hint="@string/full_name"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -130,42 +130,6 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/white"
                         android:textSize="15sp"
-                        android:inputType="textPersonName" />
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingStart="20dp"
-                android:paddingTop="20dp"
-                android:paddingEnd="20dp">
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/signUpLastName"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/background_login"
-                    android:hint="@string/last_name"
-                    app:boxStrokeColor="#00696969"
-                    app:hintTextColor="@color/white"
-                    app:boxStrokeErrorColor="#00696969"
-                    app:errorTextColor="@color/brightRed"
-                    app:errorTextAppearance="@style/error_appearance"
-                    app:placeholderTextColor="@color/white">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/signUpLastNameInputText"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:textSize="15sp"
-                        android:textColor="@color/white"
                         android:inputType="textPersonName" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -212,7 +176,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:orientation="horizontal"
                 android:paddingStart="20dp"
                 android:paddingTop="20dp"
                 android:paddingEnd="20dp">
