--- a/app/src/main/res/layout/activity_submit.xml
+++ b/app/src/main/res/layout/activity_submit.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#191919"
-    tools:context=".SubmitActivity">
+    tools:context=".Submission.SubmitActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -267,7 +267,7 @@
                             android:text="@string/submit_audio"
                             android:elevation="4dp"
                             android:textAllCaps="false"
-                            android:textColor="@android:color/white"
+                            android:textColor="@android:color/black"
                             android:textSize="12dp"
                             android:textAlignment="center" />
 
