--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -132,17 +132,15 @@
                 android:gravity="center"
                 android:padding="40dp">
 
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/forgotPasswordNextBtn"
-                    android:layout_width="match_parent"
+                    android:layout_width="250dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="50dp"
-                    android:layout_marginEnd="50dp"
-                    android:background="@drawable/background_buttons"
-                    android:enabled="true"
+                    android:padding="10dp"
+                    app:cornerRadius="10dp"
                     android:text="Next"
                     android:textAllCaps="false"
-                    android:textColor="@color/white"
+                    android:textColor="@color/buttonTextColor"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
