--- a/app/src/main/res/drawable-v24/background_buttons.xml
+++ b/app/src/main/res/drawable-v24/background_buttons.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#49C556"/>
+    <solid android:color="@color/colorPrimaryUsed"/>
     <corners android:radius="20dp"/>
-    <stroke android:width="2dp" android:color="#8FDFDEDE"/>
+    <stroke android:width="2dp" android:color="#4D54B0"/>
     <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
 </shape>
