--- a/app/src/main/res/drawable/nav_item_background.xml
+++ b/app/src/main/res/drawable/nav_item_background.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="true"
-          android:color = "@color/orange"
-        />
-    <item android:state_checked="false"
-        android:color = "#E4E4E4"
-        />
+    <item android:color="@color/colorPrimaryUsed" android:state_checked="true" />
+
+    <item android:color="#E4E4E4" android:state_checked="false" />
 
 
 </selector>
