--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -19,6 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="#151515"
+        app:itemRippleColor="@color/yellow"
         app:itemIconTint="@drawable/nav_item_background"
         app:itemTextColor="@drawable/nav_item_background"
         app:labelVisibilityMode="labeled"
