--- a/app/src/main/res/layout/activity_otpverification.xml
+++ b/app/src/main/res/layout/activity_otpverification.xml
@@ -137,25 +137,39 @@
                 android:gravity="center"
                 android:padding="40dp">
 
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/confirmSignup"
-                    android:layout_width="match_parent"
+                    android:layout_width="250dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="50dp"
-                    android:layout_marginEnd="50dp"
-                    android:background="@drawable/background_buttons"
-                    android:enabled="true"
+                    app:cornerRadius="10dp"
+                    android:padding="10dp"
                     android:text="@string/confirm"
                     android:textAllCaps="false"
-                    android:textColor="@color/white"
+                    android:textColor="@color/buttonTextColor"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
             </LinearLayout>
 
-
-
         </LinearLayout>
     </ScrollView>
+
+    <LinearLayout
+        android:id="@+id/otpProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:background="@drawable/background_loading"
+        android:elevation="10dp">
+
+        <ProgressBar
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"/>
+
+
+    </LinearLayout>
 
 </RelativeLayout>
