--- a/app/src/main/res/layout/activity_set_new_password.xml
+++ b/app/src/main/res/layout/activity_set_new_password.xml
@@ -169,17 +169,17 @@
                 android:paddingStart="40dp"
                 android:paddingEnd="40dp">
 
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/updatePasswordContinueBtn"
-                    android:layout_width="match_parent"
+                    android:layout_width="250dp"
                     android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    app:cornerRadius="10dp"
                     android:layout_marginStart="50dp"
                     android:layout_marginEnd="50dp"
-                    android:background="@drawable/background_buttons"
-                    android:enabled="true"
                     android:text="Next"
                     android:textAllCaps="false"
-                    android:textColor="@color/white"
+                    android:textColor="@color/buttonTextColor"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
