--- a/app/src/main/res/layout/dashboard_cardview_layout.xml
+++ b/app/src/main/res/layout/dashboard_cardview_layout.xml
@@ -10,13 +10,13 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        app:cardCornerRadius="10dp"
+        app:cardCornerRadius="2dp"
         app:cardElevation="8dp">
 
             <ImageView
                 android:id="@+id/albumArtRecycler"
                 android:layout_width="match_parent"
-                android:layout_height="247dp"
+                android:layout_height="match_parent"
                 android:contentDescription="@string/podcast"
                 android:scaleType="fitXY"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:textAlignment="viewStart"
         android:textColor="#FAFBFF"
-        android:textSize="15sp"
+        android:textSize="16sp"
         android:textStyle="bold" />
     <TextView
         android:id="@+id/textAuthor"
@@ -38,6 +38,6 @@
         android:layout_height="wrap_content"
         android:textAlignment="viewStart"
         android:textColor="#FAFBFF"
-        android:textSize="10sp"
-        android:textStyle="normal" />
+        android:textSize="12sp"
+        android:textStyle="bold" />
 </LinearLayout>
