--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,24 +3,24 @@
     xmlns:tools="http://schemas.android.com/tools">
     <item
         android:id="@+id/nav_home"
-        android:icon="@drawable/ic_fi_sr_home"
+        android:icon="@drawable/menu_home"
         android:enabled="true"
         android:title="@string/home" />
 
     <item
         android:id="@+id/nav_explore"
-        android:icon="@drawable/ic_fi_sr_dice"
+        android:icon="@drawable/menu_explore"
         android:enabled="true"
         android:title="@string/explore" />
 
     <item
         android:id="@+id/nav_bookmark"
-        android:icon="@drawable/ic_fi_sr_bookmark"
+        android:icon="@drawable/menu_bookmark"
         android:enabled="true"
         android:title="@string/bookmarks" />
     <item
         android:id="@+id/nav_user"
-        android:icon="@drawable/ic_fi_sr_following"
+        android:icon="@drawable/menu_profile"
         android:enabled="true"
         android:title="@string/me" />
 
