modified to kotlin files/ Changes in gradle file

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -52,8 +52,8 @@
 
                 <ImageView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_outline_vpn_key_24"
+                    android:layout_height="200dp"
+                    android:src="@drawable/forgot_password"
                     android:layout_gravity="center"
                     android:contentDescription="@string/key_image" />
 
