--- a/app/src/main/res/layout/activity_set_new_password.xml
+++ b/app/src/main/res/layout/activity_set_new_password.xml
@@ -47,13 +47,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:gravity="center"
-                android:padding="40dp">
+                android:gravity="center">
 
                 <ImageView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_outline_update_cred"
+                    android:layout_height="200dp"
+                    android:src="@drawable/update_password"
                     android:layout_gravity="center"
                     android:contentDescription="@string/key_image" />
 
