--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".HomeScreenFragments.ExploreFragment">
+    tools:context=".homeScreenFragments.ExploreFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -105,6 +105,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/explore_ghazal_layout"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:layout_margin="10dp"
