--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -17,8 +17,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
-            android:padding="10dp"
-            tools:ignore="UselessParent">
+            android:background="#00000000"
+            android:padding="10dp">
 
             <ImageView
                 android:id="@+id/forgotPassword_back"
@@ -43,23 +43,25 @@
             android:background="@color/black"
             android:orientation="vertical">
 
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
                 android:gravity="center"
+                android:orientation="vertical"
                 android:padding="40dp">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="200dp"
-                    android:src="@drawable/forgot_password"
                     android:layout_gravity="center"
-                    android:contentDescription="@string/key_image" />
+                    android:contentDescription="@string/key_image"
+                    android:src="@drawable/forgot_password" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:gravity="center"
                     android:paddingStart="40dp"
                     android:paddingTop="10dp"
@@ -67,10 +69,9 @@
                     android:paddingBottom="10dp"
                     android:text="@string/forgot_password"
                     android:textAlignment="center"
-                    android:layout_gravity="center"
                     android:textColor="@color/white"
-                    android:textStyle="bold"
-                    android:textSize="30sp" />
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -86,8 +87,6 @@
                     android:textSize="15sp" />
 
             </LinearLayout>
-
-
 
             <LinearLayout
                 android:id="@+id/forgotPasswordEmailLayout"
