--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,35 +8,9 @@
     android:background="@color/black"
     tools:context=".common.loginSignup.LoginActivity">
 
-    <LinearLayout
-        android:id="@+id/signUpHeaderLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/black"
-        android:orientation="vertical">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/login"
-                android:textColor="@color/white"
-                android:layout_centerInParent="true"
-                android:textSize="25sp"
-                android:textStyle="bold" />
-
-        </RelativeLayout>
-    </LinearLayout>
-
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/signUpHeaderLayout">
+        android:layout_height="wrap_content">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -49,6 +23,28 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_marginTop="?actionBarSize"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+
+                    android:layout_height="250dp"
+                    android:layout_gravity="center"
+                    android:contentDescription="@string/login"
+                    android:src="@drawable/login" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/login"
+                    android:textColor="@color/white"
+                    android:layout_centerInParent="true"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -72,7 +68,6 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/sign_up_for_free"
-                        android:onClick="redirectToSignup"
                         android:textColor="#FFEA00"
                         android:textSize="12sp"
                         android:textStyle="bold" />
@@ -217,38 +212,6 @@
 
 
             </LinearLayout>
-
-            <RelativeLayout
-                android:layout_below="@id/loginButtonLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="20dp"
-                android:orientation="horizontal">
-
-                <com.google.android.gms.common.SignInButton
-                    android:id="@+id/sign_in_button_gmail"
-                    android:layout_width="60dp"
-                    android:layout_centerInParent="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_height="30dp"
-                    android:layout_gravity="center" />
-
-                <com.facebook.login.widget.LoginButton
-                    android:id="@+id/sign_in_button_fb"
-                    android:layout_width="60dp"
-                    android:layout_centerInParent="true"
-                    android:layout_height="30dp"
-                    android:layout_gravity="center"/>
-
-                <com.google.android.gms.common.SignInButton
-                    android:id="@+id/sign_in_button_apple"
-                    android:layout_width="60dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerInParent="true"
-                    android:layout_height="30dp"
-                    android:layout_gravity="center" />
-
-            </RelativeLayout>
 
         </RelativeLayout>
 
