--- a/app/src/main/res/layout/ghazal_card_view.xml
+++ b/app/src/main/res/layout/ghazal_card_view.xml
@@ -28,44 +28,25 @@
                 android:layout_weight="1"
                 android:contentDescription="@string/podcast"
                 android:scaleType="fitXY"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/background_login"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_margin="10dp"
-                android:orientation="vertical">
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:id="@+id/shareImage"
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_gravity="center"
-                android:layout_margin="10dp"
-               android:src="@drawable/ic_baseline_share_24"
-                 />
-                <ImageView
-                    android:id="@+id/downloadImage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:layout_weight="1"
-                    android:src="@drawable/ic_fi_sr_download"
-                    android:layout_gravity="center"
-                    />
-            </LinearLayout>
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                android:foregroundTint="@color/yellow"
+                android:backgroundTint="@color/yellow"
+                android:src="@drawable/ic_baseline_share_24"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 
     </androidx.cardview.widget.CardView>
 
