added exoPlayer and dagger files

--- a/app/src/main/res/layout/fragment_dash_board.xml
+++ b/app/src/main/res/layout/fragment_dash_board.xml
@@ -114,6 +114,7 @@
                             android:layout_weight="2">
 
                             <Button
+                                android:id="@+id/play_dashboard_btn"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentBottom="true"
