--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center_vertical"
+    android:background="@color/black"
     tools:context=".MusicPlayer.MusicPlayer">
 
     <ImageView
@@ -14,15 +15,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY" />
-
-    <io.alterac.blurkit.BlurLayout
-        android:id="@+id/blurLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        app:blk_blurRadius="20"
-        app:blk_downscaleFactor="0.1"
-        app:blk_fps="0" />
 
     <LinearLayout
         android:layout_width="match_parent"
